<?xml version="1.0" encoding="utf-8"?>
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/step_list_fragment"
    android:name="com.haleysoftware.startbaking.StepListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StepListActivity">

</fragment>